<resources>
    <string name="app_name">CrowdInside Client</string>

    <!-- Strings related to Settings -->
    <string name="logging">Logging is enabled</string>
    <string name="no_logging">Logging is disabled</string>

    <string name="log_on">Enabled</string>
    <string name="log_off">Disabled</string>

    <string name="wifi">Log WiFi AP</string>
    <string name="acc">Log accelerometer</string>
    <string name="magn">Log magnetometer</string>
    <string name="gyro">Log gyroscope</string>
    <string name="gps">Log GPS</string>

    <string name="log_key" translatable="false">log</string>
    <string name="log_wifi" translatable="false">wifi_enabled</string>
    <string name="log_acc" translatable="false">accelerometer_enabled</string>
    <string name="log_magn" translatable="false">magnetometer_enabled</string>
    <string name="log_gyro" translatable="false">gyro_enabled</string>
    <string name="log_gps" translatable="false">gps_enabled</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
</resources>
