<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/log_wifi"
        android:summaryOff="@string/log_off"
        android:summaryOn="@string/log_on"
        android:title="@string/wifi"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/log_acc"
        android:summaryOff="@string/log_off"
        android:summaryOn="@string/log_on"
        android:title="@string/acc"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/log_magn"
        android:summaryOff="@string/log_off"
        android:summaryOn="@string/log_on"
        android:title="@string/magn"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/log_gyro"
        android:summaryOff="@string/log_off"
        android:summaryOn="@string/log_on"
        android:title="@string/gyro"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/log_gps"
        android:summaryOff="@string/log_off"
        android:summaryOn="@string/log_on"
        android:title="@string/gps"/>
</PreferenceScreen>